Added user accounts

--- a/listcylon/templates/auth/user_form.html
+++ b/listcylon/templates/auth/user_form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load bootstrap_tags %}
 {% block title %}Sign Up{% endblock title %}
 
 {% block content %}
@@ -7,8 +7,8 @@
   <h3>Sign Up</h3>
   <form method="post" action="{% url 'signup' %}">
     {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Sign Up!" class="waves-effect waves-light btn">
+    {{ form | as_bootstrap }}
+    <input type="submit" value="Sign Up!" class="btn btn-info">
   </form>
 </div>
 {% endblock %}
