--- a/listcylon/templates/registration/login.html
+++ b/listcylon/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load bootstrap_tags %}
 {% block title %}Login{% endblock title %}
 
 {% block content %}
@@ -7,8 +7,8 @@
   <h3>Login</h3>
   <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Log In" class="waves-effect waves-light btn">
+    {{ form | as_bootstrap }}
+    <input type="submit" value="Log In" class="btn btn-info">
   </form>
 </div>
 {% endblock %}
