--- a/listcylon/templates/main/home.html
+++ b/listcylon/templates/main/home.html
@@ -4,6 +4,34 @@
 
 {% block content %}
 <div class="container">
-  <h3>Welcome Back {{ request.user }}</h3>
+  <h3 class="text-center">Welcome Back {{ request.user }} </h3>
+  <h3 class="text-center">{{ request.user.userprofile.city_preference }}</h3>
+  <h5 class="text-center">Update your city preferences <a href="{% url 'update_city' request.user.id %}">Here</a></h5>
+  <div class="col-md-2">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title"><a href="{% url 'all_jobs_city' %}">Jobs</a></h3>
+      </div>
+      <div class="panel-body">
+        <p><a href="{% url 'accounting' %}">Accounting</a></p>
+        <p><a href="{% url 'buisness' %}">Buisness</a></p>
+        <p><a href="{% url 'education' %}">Education</a></p>
+        <p><a href="{% url 'real_estate' %}">Real Estate</a></p>
+        <p><a href="{% url 'government' %}">Government</a></p>
+        <p><a href="{% url 'technology' %}">Technology</a></p>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title"><a href="{% url 'all_cars_city' %}">Automotive</a></h3>
+      </div>
+      <div class="panel-body">
+        <p><a href="{% url 'acura' %}">Acura</a></p>
+        <p><a href="{% url 'audi' %}">Audi</a></p>
+        <p><a href="{% url 'BMW' %}">BMW</a></p>
+        <p><a href="{% url 'buick' %}">Buick</a></p>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
